# pyrustpipe

./: .gitignore  ADVANCED_FEATURES.md  Cargo.toml  DEMO_SCRIPT_SIMPLE.md  DEMO_VIDEO_COMMANDS.md  DEMO_VIDEO_GUIDE.md  DEVELOPMENT.md  FEATURE_TESTING_GUIDE.md  HACKATHON.md  HACKATHON_SUMMARY.txt  IMPLEMENTATION_STATUS.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  SUBMISSION.md  TESTING_AND_SCALING.md  USER_GUIDE.md  audit.sh  demo_code.py  demo_data.csv  performance_demo.py  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture.md
examples/: basic_validation.py  benchmark.py  billion_record_demo.py  custom_rules.py  fintech_validation.py  s3_validation.py  sample_data.csv  user_rules.py
python/: .ruff.toml  pyproject.toml
python/pyrustpipe/: __init__.py  caching.py  cli.py  decorators.py  distributed.py  dsl.py  example.py  s3.py  schema.py  streaming.py  types.py  validator.py
python/tests/: test_basic.py
rust/: Cargo.toml
rust/.cargo/: config.toml
rust/src/: lib.rs
src/: lib.rs  s3.rs  types.rs  validator.rs
src/pyrustppe/: __init__.py  build.py  core.py
src/src/rust/: Cargo.toml
src/src/rust/src/: lib.rs
tests/: conftest.py  test_decorators.py  test_edge_cases.py  test_integration.py  test_s3.py  test_schema.py  test_validator.py
