[package]
name = "pyrustpipe"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "High-performance data validation with Rust backend"

[lib]
name = "pyrustpipe_core"
crate-type = ["cdylib", "rlib"]

[dependencies]
# Python bindings
pyo3 = { version = "0.20", features = ["extension-module", "abi3-py38"] }

# Parallel processing
rayon = "1.8"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# CSV/Data parsing
csv = "1.3"
# polars = { version = "0.36", features = ["lazy", "dtype-full", "parquet"] }

# AWS S3
aws-config = "1.1"
aws-sdk-s3 = "1.10"
tokio = { version = "1.35", features = ["full"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Utilities
regex = "1.10"
chrono = "0.4"

[dev-dependencies]
criterion = "0.5"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
