[build-system]
requires = ["setuptools>=42", "wheel", "maturin>=0.14"]
build-backend = "maturin"

[project]
name = "pyrustpipe"
version = "0.1.0"
description = "A hybrid Python/Rust library for high-performance data validation and transformation"
authors = [{name = "Your Name", email = "your.email@example.com"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Rust",
]

[project.urls]
Homepage = "https://github.com/your-username/pyrustpipe"