[build-system]
requires = ["maturin>=1.8,<2.0"]
build-backend = "maturin"

[project]
name = "pyrustpipe"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]
[tool.maturin]
features = ["pyo3/extension-module"]


[tool.ruff]
line-length = 88
select = ["E", "F", "W", "I", "B", "C", "N", "RUF"]
ignore = []

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]