[project]
name = "pyrustpipe"
version = "0.1.0"
description = "Python-Rust data pipeline library"
authors = [{ name = "Jambong Ralpher", email = "jambongralpher@gmail.com" }]
license = "MIT"
dependencies = ["maturin>=0.14"]

[build-system]
requires = ["maturin>=0.14"]
build-backend = "maturin"

[tool.pytest]
testpaths = ["tests"]